--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 		<version>6.1.5.Final</version>
 		
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>	
+		
 	</dependencies>
 
 	<build>
